--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Tanayendu Bari
-logo: /assets/img/headshot_circle.png
+logo: /img/headshot_circle.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
+# - jekyll-remote-theme
