--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tanayendu Bari
-logo: /img/headshot_circle.png
+logo: /img/photo.jpeg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
