--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tanayendu Bari
 logo: /img/photo.jpeg
 #description: text below image
-show_downloads: true
+# show_downloads: true
 theme: jekyll-theme-minimal
 # - jekyll-remote-theme
